--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fontsource/caveat": "^5.0.19",
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sheryjs": "^1.0.0-beta.0.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -26,7 +27,9 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "glslify-loader": "^2.0.0",
     "postcss": "^8.4.41",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
