--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@fontsource/caveat": "^5.0.19",
-    "framer-motion": "^11.3.30",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sheryjs": "^1.0.0-beta.0.1.8"
+    "sheryjs": "^1.0.0-beta.0.1.8",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
