--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/caveat": "^5.0.19",
+    "@tabler/icons-react": "^3.14.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
