--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "sheryjs": "^1.0.0-beta.0.1.8",
     "tailwind-merge": "^2.5.2"
   },
