some editing in code

--- a/components.json
+++ b/components.json
@@ -1,20 +1,20 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
-  "rsc": true,
+  "rsc": false,
   "tsx": false,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/output.css",
-    "baseColor": "slate",
-    "cssVariables": false,
+    "css": "src/index.css",
+    "baseColor": "zinc",
+    "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
-    "examples": "@/components/examples",
-    "blocks": "@/components/blocks"
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   }
 }
